# modape

./: .gitignore  .pylintrc  .travis.yml  404.html  CHANGES.md  Dockerfile  INDEX.md  LICENSE  MANIFEST.in  README.rst  TODO.md  develop.ipynb  globalAPI.ipynb  index.html  mkdocs.yml  mount_chain_from_arc_dev.sh  parallel_read.ipynb  pylintrc  pyproject.toml  requests.ipynb  setup.cfg  setup.py  sitemap.xml  testing.ipynb  todo.md
.github/workflows/: ci.yml  docker.yaml  wheels.yml
_version/: __init__.py  version_info.py
chain/: README.md  arc_modape_bash.sh  arc_modape_run.sh  arc_modis_ndvi.py  dev.json  docker-compose.yml  interim_arc_modape.txt  main.py  production.example.json  test_download.py  wsgi.py
chain/.devcontainer/: Dockerfile  devcontainer.json  readme.md  setup_modape.sh  setup_storage.sh
chain/dependencies/: geos-3.8.1.tar.bz2
chain/modape_helper/: __init__.py  modape_helper.py  timeslicing.py
chain/utils/: modape_calendar.py  policy_dataset_test.sh  test_per_cookiejar.py
collect/: index.html
docs/: collect.md  download.md  index.md  io.md  modis_executables.md  other_executables.md  smooth.md  window.md
docs/casts/: collect.cast  csv.cast  download.cast  info.cast  process.cast  ptable.cast  rts.cast  smooth.cast  smtCSV.cast  smtRTS.cast  window.cast
docs/examples/: whittaker_core.ipynb
download/: index.html
examples/: whittaker_core.ipynb
io/: index.html
modape/: __init__.py  _whittaker.c  _whittaker.pyx  constants.py  downloadMODIS.py  exceptions.py  infoMODIS.py  modis.py  processMODIS.py  producttableMODIS.py  smoothCSV.py  smoothMODIS.py  smoothRTS.py  utils.py  windowMODIS.py
modape/data/: MODIS_V6_PT.pkl  MXD_dates.pkl  MXD_testdata.pkl  ModlandTiles_bbx.pkl  cmr_api_response.pkl  hdf.xml
modape/modis/: __init__.py  collect.py  download.py  io.py  smooth.py  window.py
modape/scripts/: __init__.py  csv_smooth.py  modis_collect.py  modis_download.py  modis_info.py  modis_smooth.py  (+4 more)
modis_executables/: index.html
other_executables/: index.html
scripts/: processMODIS.py
search/: search_index.json
smooth/: index.html
tests/: fake.py  test_cli.py  test_io.py  test_modis.py  test_utils.py  test_whittaker.py
window/: index.html
wsmtk/: MODproductTable.py  __init__.py  _whittaker.c  _whittaker.pyx  downloadMODIS.py  hdf5.py  infoMODIS.py  modis.py  processMODIS.py  productinfoMODIS.py  producttableMODIS.py  smoothCSV.py  smoothMODIS.py  smoothRTS.py  utils.py  windowMODIS.py
(+35 files in other folders)
