[tool.poetry]
name = "modape"
version = "1.0.3"
description = ""
authors = [""]
readme = "README.rst"


[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
h5py = "^3.10.0"
python-cmr = "^0.9.0"
requests = "^2.31.0"
pycksum = "^0.4.7"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
